Thu May 15 21:14:22 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in src/pool/Makefile.am:
	- fix compile problem with HP/UX 11

Thu May 15 16:35:56 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/native.c src/odbc/odbc.c src/odbc/odbc_util.c:
	- some small changes
	- support mssql quoting like [foo]

Thu May 15 15:22:14 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/alternative_character_sets.h:
	- place first GNU names
	* src/tds/iconv.c: use some symbolic constants
	* src/tds/locale.c: cleanup

Thu May 15 02:46:52 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/alternative_character_sets.h 
	- removed perl code, sorted by canonical name
	- added Tru64 names
	
Wed May 14 20:50:04 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c src/tds/mem.c: fix iconv init and clean

Wed May 14 14:13:53 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/iconv.c tds_iconv_close closes all descriptors

Wed May 14 18:15:49 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/character_sets.h src/tds/iconv.c:
	- start run time charset searching

Wed May 14 17:01:56 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/alternative_character_sets.h:
	- other HP/UX charsets

Wed May 14 11:14:26 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/alternative_character_sets.h:
	* src/tds/character_sets.h:
	- updated adding HP/UX names

Tue May 13 21:20:26 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: update environment info

Tue May 13 12:09:42 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/iconv.c
	- look up canonical charset before initializing iconv
	* src/tds/alternative_character_sets.h src/tds/character_sets.h 
	- rollback today's change
	* src/apps/tsql.c make message a little clearer

Tue May 13 17:42:41 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: enable thread-safe by default
