@@ -1,3 +1,6 @@
+Thu May 16 17:25:35 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* src/tds/getmac.c: get MAC address on Linux
+
 Thu May 15 21:14:22 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* configure.in src/pool/Makefile.am:
 	- fix compile problem with HP/UX 11
